--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
     "express": "^4.16.4",
     "redis": "^2.8.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
+    "chai-http": "^4.2.1",
+    "mocha": "^5.2.0",
+    "redis-mock": "^0.43.0",
+    "sinon": "^7.2.3"
+  },
   "scripts": {
     "test": "test"
   },
