--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "sinon": "^7.2.3"
   },
   "scripts": {
-    "test": "test"
+    "test": "mocha ./test"
   },
   "repository": {
     "type": "git",
