--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "sinon": "^7.2.3"
   },
   "scripts": {
-    "test": "mocha ./test"
+    "test": "mocha ./test",
+    "start": "node server.js"
   },
   "repository": {
     "type": "git",
