--- a/package.json
+++ b/package.json
@@ -14,8 +14,7 @@
     "chai-as-promised": "^7.1.1",
     "chai-http": "^4.2.1",
     "mocha": "^5.2.0",
-    "redis-mock": "^0.43.0",
-    "sinon": "^7.2.3"
+    "redis-mock": "^0.43.0"
   },
   "scripts": {
     "test": "mocha ./test",
